[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_loader"
version = "0.1.0"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "bitsandbytes",
    "huggingface_hub"
]

[tool.setuptools.packages.find]
include = ["llm_loader*"]